# OpenCircuit

./: .gitignore  Cargo.toml  README.md
crates/opencircuit-ai/: Cargo.toml
crates/opencircuit-ai/docs/: CIRCUIT_GENERATION.md
crates/opencircuit-ai/examples/: component_recommendations_demo.rs
crates/opencircuit-ai/src/: chat_handler.rs  circuit_generator.rs  circuit_simulator.rs  component_advisor.rs  docs.rs  embeddings.rs  lib.rs  models.rs  ollama_client.rs  ollama_manager.rs
crates/opencircuit-ai/tests/: README.md  component_recommendations.rs  mock_component_recommendations.rs  ollama_integration.rs
crates/opencircuit-circuit/: Cargo.toml
crates/opencircuit-circuit/src/: lib.rs
crates/opencircuit-core/: Cargo.toml
crates/opencircuit-core/examples/: api_integrations_demo.rs
crates/opencircuit-core/src/: lib.rs  models.rs
crates/opencircuit-core/src/apis/: digikey.rs  mod.rs  mouser.rs  octopart.rs
crates/opencircuit-core/src/circuit/: mod.rs  netlist.rs  validation.rs
crates/opencircuit-core/tests/: api_integration_tests.rs
crates/opencircuit-database/: Cargo.toml
crates/opencircuit-database/src/: components.rs  lib.rs  schema.rs  search.rs
crates/opencircuit-database/tests/: integration_tests.rs  minimal_test.rs  simple_test.rs
crates/opencircuit-graphics/: Cargo.toml
crates/opencircuit-graphics/src/: animations.rs  circuit_viewer.rs  lib.rs  primitives.rs  schematic_renderer.rs  styles.rs
crates/opencircuit-gui/: Cargo.toml
crates/opencircuit-gui/src/: app.rs  chat_panel.rs  egui_app.rs  lib.rs
crates/opencircuit-pcb/: Cargo.toml
crates/opencircuit-pcb/src/: lib.rs
crates/opencircuit-simulation/: Cargo.toml
crates/opencircuit-simulation/src/: analysis.rs  errors.rs  lib.rs  memory.rs  ngspice_wrapper.rs  results.rs  spice_parser.rs
crates/opencircuit-simulation/tests/: integration_test.rs
crates/opencircuit-utils/: Cargo.toml
crates/opencircuit-utils/src/: lib.rs
docs/: changelog.md  index.md  resources.md
docs/ai/: README.md  ollama_api_reference.md  ollama_integration.md  ollama_integration_summary.md  ollama_models.md  ollama_performance.md  ollama_rust_integration.md  ollama_setup.md  overview.md
docs/circuit/: overview.md  simulation.md
docs/components/: apis.md  overview.md
docs/gui/: overview.md
docs/rust/: core_learning.md  overview.md
docs/shared/: overview.md
migrations/: 001_initial.sql
milestones/: setup_ollama_integration.md
project_docs/: decisions.md  errors.log.md  prd.md  requirements.md  setup_guide.md  tasks.md
project_docs/milestones/: README.md  build_circuit_generation.md  build_component_database_integration.md  cargo_project_initialization.md  create_ai_powered_component_recommendations.md  implement_basic_chat.md  implement_basic_egui.md  implement_component_api_integrations.md  setup_database_schema_and_connections.md  setup_tauri_application_framework.md  task_12_ngspice_integration.md  task_14_rust_docs.md
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/ai/: chat_handler.rs  mod.rs
src/circuit/: mod.rs
src/database/: mod.rs  schema.rs
src/gui/: app.rs  mod.rs
src/pcb/: mod.rs
src/utils/: mod.rs
tests/: README.md  human_like_integration_tests.rs  integration_tests.rs  user_simulation_tests.rs
