[package]
name = "opencircuit"
version = "0.1.0"
edition = "2021"
authors = ["OpenCircuit Team"]
description = "AI-powered circuit design and PCB layout tool"
license = "MIT"
repository = "https://github.com/opencircuit/opencircuit"
keywords = ["circuit", "pcb", "ai", "electronics", "design"]
categories = ["science", "simulation", "gui"]

[dependencies]
# Core Framework
tauri = { version = "2.7.0", features = ["macos-private-api"], optional = true }
# egui = "0.24"  # Temporarily disabled due to edition2024 dependency issue
# eframe = "0.24"  # Will be re-enabled once dependency issue is resolved
# egui_extras = "0.24"

# AI/ML Integration (will be added in later tasks)
# reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Circuit Simulation (will be added when NgSpice integration is implemented)
# ngspice-sys = "0.1"  # Uncomment when implementing NgSpice integration

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
dirs = "5.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }

# Development dependencies
[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempfile = "3.0"
tokio-test = "0.4"

# Workspace configuration for future modules
[workspace]
members = [
    ".",
    "src-tauri",
    # Future workspace members will be added here
    # "crates/circuit-sim",
    # "crates/pcb-engine", 
    # "crates/ai-core",
]

# Build configuration
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

# Metadata for cargo-generate and documentation
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "opencircuit"
path = "src/main.rs"

[lib]
name = "opencircuit"
path = "src/lib.rs"
