[package]
name = "opencircuit"
version = "0.1.0"
edition = "2021"
authors = ["OpenCircuit Team"]
description = "AI-powered circuit design and PCB layout tool"
license = "MIT"
repository = "https://github.com/opencircuit/opencircuit"
keywords = ["circuit", "pcb", "ai", "electronics", "design"]
categories = ["science", "simulation", "gui"]

[dependencies]
# OpenCircuit Crates
opencircuit-core = { path = "crates/opencircuit-core" }
opencircuit-ai = { path = "crates/opencircuit-ai" }
opencircuit-circuit = { path = "crates/opencircuit-circuit" }
opencircuit-pcb = { path = "crates/opencircuit-pcb" }
opencircuit-gui = { path = "crates/opencircuit-gui" }
opencircuit-database = { path = "crates/opencircuit-database" }
opencircuit-utils = { path = "crates/opencircuit-utils" }

# Core Framework
tauri = { version = "2.7.0", features = ["macos-private-api"], optional = true }
# egui = "0.24"  # Temporarily disabled due to edition2024 dependency issue
# eframe = "0.24"  # Will be re-enabled once dependency issue is resolved
# egui_extras = "0.24"

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"

# Development dependencies
[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempfile = "3.0"
tokio-test = "0.4"

# Workspace configuration for future modules
[workspace]
members = [
    ".",
    "src-tauri",
    "crates/opencircuit-core",
    "crates/opencircuit-ai",
    "crates/opencircuit-circuit",
    "crates/opencircuit-pcb",
    "crates/opencircuit-gui",
    "crates/opencircuit-database",
    "crates/opencircuit-utils",
]

# Build configuration
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

# Metadata for cargo-generate and documentation
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "opencircuit"
path = "src/main.rs"

[lib]
name = "opencircuit"
path = "src/lib.rs"
