[package]
name = "opencircuit-ai"
version = "0.1.0"
edition = "2021"
authors = ["OpenCircuit Team"]
description = "AI integration for the OpenCircuit application"
license = "MIT"
repository = "https://github.com/opencircuit/opencircuit"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
ollama-rs = { version = "0.1.6", features = ["stream"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
opencircuit-core = { path = "../opencircuit-core" }
opencircuit-utils = { path = "../opencircuit-utils" }
opencircuit-circuit = { path = "../opencircuit-circuit" }

[dev-dependencies]
rstest = "0.18"