[package]
name = "opencircuit-database"
version = "0.1.0"
edition = "2021"
authors = ["OpenCircuit Team"]
description = "Database layer for the OpenCircuit application"
license = "MIT"
repository = "https://github.com/opencircuit/opencircuit"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
dirs = "5.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
opencircuit-core = { path = "../opencircuit-core" }
opencircuit-utils = { path = "../opencircuit-utils" }

[dev-dependencies]
rstest = "0.18"