[package]
name = "opencircuit-gui"
version = "0.1.0"
edition = "2021"
authors = ["OpenCircuit Team"]
description = "GUI components for the OpenCircuit application"
license = "MIT"
repository = "https://github.com/opencircuit/opencircuit"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
opencircuit-core = { path = "../opencircuit-core" }
opencircuit-ai = { path = "../opencircuit-ai" }
opencircuit-circuit = { path = "../opencircuit-circuit" }
opencircuit-utils = { path = "../opencircuit-utils" }

[dev-dependencies]
rstest = "0.18"