[package]
name = "opencircuit-simulation"
version = "0.1.0"
edition = "2021"
description = "NgSpice simulation engine for OpenCircuit"
license = "MIT"
repository = "https://github.com/OpenCircuit/OpenCircuit"

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# FFI and system
libc = "0.2"
libloading = "0.8"

# OpenCircuit crates
opencircuit-core = { path = "../opencircuit-core" }
opencircuit-circuit = { path = "../opencircuit-circuit" }

[features]
default = []

[dev-dependencies]
tokio-test = "0.4"