[package]
name = "opencircuit-utils"
version = "0.1.0"
edition = "2021"
authors = ["OpenCircuit Team"]
description = "Utility functions for the OpenCircuit application"
license = "MIT"
repository = "https://github.com/opencircuit/opencircuit"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rstest = "0.18"